netbootxyz/netbootxyz-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: netbootxyz
  name: netbootxyz
spec:
  ports:
    - name: "service"
      port: 3000
      targetPort: 3000
    - name: "tftp"
      port: 69
      targetPort: 69
      protocol: UDP
    - name: "assets"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: netbootxyz
status:
  loadBalancer: {}
