netbootxyz/netbootxyz-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netboot-assets-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  labels:
    app: netbootxyz
spec:
  rules:
    - host: assets.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbootxyz
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netboot-configure-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  labels:
    app: netbootxyz
spec:
  rules:
    - host: netbootxyz.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbootxyz
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netboot-configure-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ca-issuer
  labels:
    app: netbootxyz
spec:
  rules:
    - host: netbootxyz.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbootxyz
                port:
                  number: 3000
  tls:
    - hosts:
        - netbootxyz.celestium.life
      secretName: netbootxyz-cert
